; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_multi_logical_optimizer.c_CoordCombineAggOid.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_multi_logical_optimizer.c_CoordCombineAggOid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OIDOID = common dso_local global i32 0, align 4
@CSTRINGOID = common dso_local global i32 0, align 4
@ANYELEMENTOID = common dso_local global i32 0, align 4
@COORD_COMBINE_AGGREGATE_NAME = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @CoordCombineAggOid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @CoordCombineAggOid() #0 {
  %1 = alloca [3 x i32], align 4
  %2 = getelementptr inbounds [3 x i32], [3 x i32]* %1, i64 0, i64 0
  %3 = load i32, i32* @OIDOID, align 4
  store i32 %3, i32* %2, align 4
  %4 = getelementptr inbounds i32, i32* %2, i64 1
  %5 = load i32, i32* @CSTRINGOID, align 4
  store i32 %5, i32* %4, align 4
  %6 = getelementptr inbounds i32, i32* %4, i64 1
  %7 = load i32, i32* @ANYELEMENTOID, align 4
  store i32 %7, i32* %6, align 4
  %8 = load i32, i32* @COORD_COMBINE_AGGREGATE_NAME, align 4
  %9 = getelementptr inbounds [3 x i32], [3 x i32]* %1, i64 0, i64 0
  %10 = call i32 @CitusFunctionOidWithSignature(i32 %8, i32 3, i32* %9)
  ret i32 %10
}

declare dso_local i32 @CitusFunctionOidWithSignature(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
